lab_05: add messages for users
