# src/main/resources/spec/openApi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: OTUS high-load project
-  version: 0.0.4
+  version: 0.0.5
 servers:
   - url: http://127.0.0.1:8080
     description: Generated server url
@@ -44,6 +44,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
     post:
       tags:
         - post-controller
@@ -71,6 +77,12 @@ paths:
                 $ref: '#/components/schemas/Post'
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -103,6 +115,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
     delete:
       tags:
         - friend-controller
@@ -126,6 +144,12 @@ paths:
           description: OK
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -156,6 +180,50 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
+  /message:
+    post:
+      tags:
+        - message-controller
+      summary: Create message
+      description: Create message
+      operationId: createNewMessage
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MessageSend'
+        required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /login:
     post:
       tags:
@@ -178,6 +246,12 @@ paths:
                 $ref: '#/components/schemas/AuthenticationDtoResponse'
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -215,6 +289,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /user/get/{id}:
     get:
       tags:
@@ -247,6 +327,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /user/get/all:
     get:
       tags:
@@ -265,6 +351,12 @@ paths:
                   $ref: '#/components/schemas/User'
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -301,6 +393,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
     delete:
       tags:
         - post-controller
@@ -328,6 +426,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /post/feed:
     get:
       tags:
@@ -336,20 +440,6 @@ paths:
       description: Get posts of friends
       operationId: feedPost
       parameters:
-        - name: offset
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 0
-        - name: limit
-          in: query
-          required: false
-          schema:
-            type: integer
-            format: int32
-            default: 10
         - name: token
           in: query
           required: true
@@ -366,6 +456,119 @@ paths:
                   $ref: '#/components/schemas/Post'
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
+  /message/{id}:
+    get:
+      tags:
+        - message-controller
+      summary: Get message
+      description: Get message by id
+      operationId: getMessageById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int32
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MessageResponse'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
+  /message/list:
+    get:
+      tags:
+        - message-controller
+      summary: Get messages
+      description: Get all messages
+      operationId: getMessages
+      parameters:
+        - name: token
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MessageResponse'
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
+  /manage/cache/ready:
+    get:
+      tags:
+        - cache-manager-controller
+      summary: Get status of the cache
+      description: Return 200 if ready, 202 otherwise
+      operationId: getCacheState
+      parameters:
+        - name: request
+          in: query
+          required: true
+          schema:
+            $ref: '#/components/schemas/cacheManagerRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: string
+                enum:
+                  - WARMING
+                  - READY
+        '400':
+          description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -407,6 +610,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /actuator/health:
     get:
       tags:
@@ -432,6 +641,12 @@ paths:
             '*/*':
               schema:
                 type: object
+        '501':
+          description: Not Implemented
+          content:
+            '*/*':
+              schema:
+                type: object
   /actuator/health/**:
     get:
       tags:
@@ -453,6 +668,12 @@ paths:
                 type: object
         '400':
           description: Bad Request
+          content:
+            '*/*':
+              schema:
+                type: object
+        '501':
+          description: Not Implemented
           content:
             '*/*':
               schema:
@@ -537,6 +758,37 @@ components:
         User:
           $ref: '#/components/schemas/User'
       description: User registration request
+    MessageSend:
+      required:
+        - text
+        - to
+      type: object
+      properties:
+        text:
+          type: string
+        to:
+          type: string
+      description: Message to send from user to user
+    MessageResponse:
+      required:
+        - from
+        - id
+        - text
+        - to
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        text:
+          type: string
+        from:
+          type: integer
+          format: int32
+        to:
+          type: integer
+          format: int32
+      description: Message from user to user response
     UserAuthenticationRequest:
       required:
         - login
@@ -561,6 +813,21 @@ components:
           type: string
           description: Expired data
           format: date
+    cacheManagerRequest:
+      required:
+        - cacheName
+        - ids
+      type: object
+      properties:
+        cacheName:
+          type: string
+        ids:
+          uniqueItems: true
+          type: array
+          items:
+            type: integer
+            format: int32
+      description: Request for cache manager
     Link:
       type: object
       properties:
